Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-10596

artificial emboldening doesn't work

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.7.0
    • 4.7.1
    • GUI: Font handling
    • None
    • Harmattan or openSUSE 11.2
    • f21d6799385e10f3ecf9d1b5af050ec83c6031b4

      Artificial emboldening for fonts which lack a real bold version
      doesn't work. Artificial italic/slanting does work.

      See also
      https://projects.maemo.org/bugzilla/show_bug.cgi?id=165283

        1. bug-165283-embolden.patch
          5 kB
          Mike FABIAN
        2. bug165283-qt.cpp
          1 kB
          Mike FABIAN
        3. bug165283-qt.pro
          0.1 kB
          Mike FABIAN
        4. bug165283-qt-47-20100430.png
          64 kB
          Mike FABIAN
        5. bug165283-qt-47-20100430-with-embolden-patch.png
          66 kB
          Mike FABIAN
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            mfabian Mike FABIAN
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes